--- a/app/views/insints/adminindex.html.erb
+++ b/app/views/insints/adminindex.html.erb
@@ -2,16 +2,14 @@
   <div class="col-2">
     <h1>Интеграции</h1>
   </div>
-  <div class="col-2">
-
+  <div class="col-2"></div>
+  <%= search_form_for @search, html: {class: 'form-inline col-3'} do |f|%>
+  <div class="form-group">
+    <%= f.search_field :subdomen_cont, placeholder: 'Домен', class: "form-control input-sm"%>
+    <%= f.submit 'Поиск', class: 'btn btn-light' %>
+    <%= link_to 'Сбросить',adminindex_insints_path, class: 'btn btn-outline-secondary' %>
   </div>
-  <%= search_form_for @search, html: {class: 'form-inline col-3'}  do |f|%>
-    <div class="form-group">
-      <%= f.search_field :subdomen_cont, placeholder: 'Домен', class: "form-control input-sm"%>
-      <%= f.submit 'Поиск', class: 'btn btn-light' %>
-      <%= link_to 'Сбросить',adminindex_insints_path, class: 'btn btn-outline-secondary' %>
-    </div>
-  <% end %>
+<% end %>
 </div>
 
 <div class="table-responsive">
@@ -24,6 +22,7 @@
       <th>Insalesid</th>
       <th>User</th>
       <th>Статус интегр</th>
+      <th>Проверить интегр</th>
       <th colspan="2"></th>
     </tr>
   </thead>
@@ -31,34 +30,22 @@
   <tbody>
     <% @insints.each do |insint| %>
       <tr>
+        <td><%= insint.inskey %></td>
+        <td><%= insint.password %></td>
+        <td><%= insint.subdomen %></td>
+        <td><%= insint.insalesid %></td>
+        <td><%= insint.user.name %></td>
         <td>
-          <%= insint.inskey %>
+          <% if insint.status == true %>настроена (Р)<% else %>
+          <% end %>
         </td>
-        <td>
-          <%= insint.password %>
-        </td>
-        <td>
-          <%= insint.subdomen %>
-        </td>
-        <td>
-          <%= insint.insalesid %>
-        </td>
-        <td>
-          <%= insint.user.name %>
-        </td>
-        <td>
-          <%= insint.status %>
-        </td>
-        <td>
-          <%= link_to '<i class="fa fa-pencil" aria-hidden="true"></i>'.html_safe, edit_insint_path(insint) %>
-        </td>
-        <td>
-          <%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, insint, :method => :delete, :data => { :confirm => 'Are you sure?' } %>
-        </td>
+        <td><%= link_to "Проверить", checkint_insints_path(:insint_id => insint.id), :remote => true, :method => :get , class: "btn btn-outline-info btn-sm" %></td>
+        <td><%= link_to '<i class="fa fa-pencil" aria-hidden="true"></i>'.html_safe, edit_insint_path(insint) %></td>
+        <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, insint, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 </div>
 
-	<%= will_paginate @insints %>
+<%= will_paginate @insints %>
