--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,10 +1,15 @@
 <p>
-  Hello #{@resource.email}!
+  добрый день
+  <%= @resource.email %>!
 </p>
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Вы или кто-то ещё оставил запрос на смену пароля. Вы можете сделать это по ссылке ниже.</p>
 <p>
-  <%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %>
+  <%= link_to 'Сменить пароль', edit_password_url(@resource, reset_password_token: @token) %>
 </p>
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
-<p>yan - <%= ENV["YANDEX_USER_NAME"] %></p>
+<p>Если Вы не запрашивали смену пароль, то пожалуйста игнорируйте это письмо.</p>
+<p>Ваш пароль не будет изменён пока Вы не нажмёте на ссылку выше и не измените его самостоятельно</p>
+
+<span>___</span>
+<span>С уважением,</span></br>
+<span>служба поддержки</span></br>
+<a href="http://k-comment.ru"><<strong>K-comment.ru</strong></a></br> <span>Сервис избранных товаров</span></br> 
