--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,15 +1,10 @@
-<p>
-  добрый день
-  <%= @resource.email %>!
-</p>
+<p>Добрый день, <%= @resource.email %>!</p>
 <p>Вы или кто-то ещё оставил запрос на смену пароля. Вы можете сделать это по ссылке ниже.</p>
-<p>
-  <%= link_to 'Сменить пароль', edit_password_url(@resource, reset_password_token: @token) %>
-</p>
+<p><%= link_to 'Сменить пароль', edit_password_url(@resource, reset_password_token: @token) %></p>
 <p>Если Вы не запрашивали смену пароль, то пожалуйста игнорируйте это письмо.</p>
 <p>Ваш пароль не будет изменён пока Вы не нажмёте на ссылку выше и не измените его самостоятельно</p>
-
-<span>___</span>
+<span>___</span></br>
 <span>С уважением,</span></br>
 <span>служба поддержки</span></br>
-<a href="http://k-comment.ru"><<strong>K-comment.ru</strong></a></br> <span>Сервис избранных товаров</span></br> 
+<a href="http://k-comment.ru"><strong>K-comment.ru</strong></a></br>
+<span>Сервис избранных товаров</span></br>
