change delete snippets

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,10 @@
           <h6>сервис избранных товаров</h6>
           <ul class="list-unstyled text-small">
             <li>
-              <a class="text-muted" href="+74997042035">84997042035</a>
+              <a class="text-muted" href="+74997042035">84997052117</a>
+            </li>
+            <li>
+              <a class="text-muted" href="+74997042035">88123392235</a>
             </li>
             <li>
               <a class="text-muted" href="mailto:k-comment.ru">info@k-comment.ru</a>
@@ -30,6 +33,9 @@
             </li>
             <li>
               <a class="text-muted" href="/#o-nas">О нас</a>
+            </li>
+            <li>
+              <a class="text-muted" href="/">Оферта</a>
             </li>
           </ul>
         </div>
