--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,10 +1,6 @@
 
 <p>
-  <strong>Client id:</strong>
-  <%= @client.clientid %>
-  <strong>ФИО:</strong>
-  <%= @fio %>
-
+  <strong>Client id:</strong> <%= @client.clientid %> <strong>ФИО:</strong> <%= @fio %><strong> Email:</strong> <%= @email %>
 </p>
 
 <p>
