--- a/app/views/insints/adminindex.html.erb
+++ b/app/views/insints/adminindex.html.erb
@@ -1,13 +1,11 @@
 <div class="row">
-  <div class="col-2">
-    <h1>Интеграции</h1>
-  </div>
+  <div class="col-2"><h1>Интеграции</h1></div>
   <div class="col-2"></div>
   <%= search_form_for @search, html: {class: 'form-inline col-3'} do |f|%>
   <div class="form-group">
     <%= f.search_field :subdomen_cont, placeholder: 'Домен', class: "form-control input-sm"%>
-    <%= f.submit 'Поиск', class: 'btn btn-light' %>
-    <%= link_to 'Сбросить',adminindex_insints_path, class: 'btn btn-outline-secondary' %>
+    <%= f.submit 'Поиск', class: 'btn btn-info' %>
+    <%= link_to 'Сбросить',adminindex_insints_path, class: 'btn btn-link' %>
   </div>
 <% end %>
 </div>
@@ -19,9 +17,9 @@
       <th>Inskey</th>
       <th>Password</th>
       <th>Subdomen</th>
-      <th>Insalesid</th>
+      <th>Insales id</th>
       <th>User</th>
-      <th>Статус интегр</th>
+      <th>Файлы интегр</th>
       <th>Проверить интегр</th>
       <th colspan="2"></th>
     </tr>
@@ -35,10 +33,7 @@
         <td><%= insint.subdomen %></td>
         <td><%= insint.insalesid %></td>
         <td><%= insint.user.name %></td>
-        <td>
-          <% if insint.status == true %>настроена (Р)<% else %>
-          <% end %>
-        </td>
+        <td><% if insint.status == true %>добавлены (Р)<% else %> не добавлены<% end %></td>
         <td><%= link_to "Проверить", checkint_insints_path(:insint_id => insint.id), :remote => true, :method => :get , class: "btn btn-outline-info btn-sm" %></td>
         <td><%= link_to '<i class="fa fa-pencil" aria-hidden="true"></i>'.html_safe, edit_insint_path(insint) %></td>
         <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, insint, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
@@ -48,4 +43,6 @@
 </table>
 </div>
 
-<%= will_paginate @insints %>
+<div class="digg_pagination">
+  <%= will_paginate @insints %>
+</div>
