--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,11 +1,7 @@
 
 <div class="row">
-  <div class="col-2">
-    <h1>Платежи</h1>
-  </div>
-  <div class="col-2">
-
-  </div>
+  <div class="col-2"><h1>Платежи</h1></div>
+  <div class="col-2"></div>
   <%= search_form_for @search, html: {class: 'form-inline col-3'}  do |f|%>
     <div class="form-group">
       <%= f.search_field :invoice_id_eq, placeholder: 'Счет', class: "form-control input-sm"%>
@@ -30,7 +26,6 @@
       <th colspan="2"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @payments.each do |payment| %>
       <tr>
@@ -48,7 +43,8 @@
     <% end %>
   </tbody>
 </table>
-
 </div>
 
-	<%= will_paginate @payments %>
+<div class="digg_pagination">
+<%= will_paginate @payments %>
+</div>
