--- a/app/views/useraccounts/index.html.erb
+++ b/app/views/useraccounts/index.html.erb
@@ -1,26 +1,13 @@
 <div class="row">
-  <div class="col">
-    <h1>Общая информация</h1>
-  </div>
+  <div class="col"><h1>Общая информация</h1></div>
 </div>
 <div class="row mt-3">
   <div class="col">
-    <h3>Регистрация
-      <small><%= current_user.name%>
-        (<%= current_user.subdomain%>)</small>
-    </h3>
-    <p>Оплачен до
-      <% if !@pay_period.nil?%><%= @pay_period %>
-      <%else%>Бесплатно<%end%>
-    </p>
-    <p>Работает до
-      <%= current_user.valid_until %></p>
-    <p>
-      <b>Название магазина:</b>
-      <%= @ins_title %></p>
-    <p>
-      <b>Телефон:</b>
-      <%= @ins_phone %></p>
+    <h3>Регистрация <small><%= current_user.name%> (<%= current_user.subdomain%>)</small></h3>
+    <p>Оплачен до  <% if !@pay_period.nil?%><%= @pay_period %><%else%>Бесплатно<%end%></p>
+    <p>Работает до  <%= current_user.valid_until %></p>
+    <p><b>Название магазина:</b><%= @ins_title %></p>
+    <p><b>Телефон:</b><%= @ins_phone %></p>
   </div>
   <div class="col">
     <h3>Интеграция insales</h3>
