--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -13,6 +13,10 @@
       В избранное добавлено товаров в кол-ве <%= @count_izb %> шт
     </p>
 
+    <% if current_admin %>
+    <p><%= link_to "Test email", dashboard_test_email_path %></p>
+    <%else%><%end%>
+    
   </div>
 
 
