--- a/app/views/user_mailer/test_welcome_email.html.erb
+++ b/app/views/user_mailer/test_welcome_email.html.erb
@@ -13,10 +13,9 @@
       To login to the site, just follow this link: <%= @url %>.
     </p>
     <p>Thanks for joining and have a great day!</p>
-    <span>___</span>
-    <span>С уважением,</span>
-    <span>служба поддержки</span>
-    <a href="http://k-comment.ru"><strong>K-comment.ru</strong></a>
-    <span>Сервис избранных товаров</span>
+    <p>___</p>
+    <p>С уважением,</p>
+    <p>служба поддержки <a href="http://k-comment.ru"><strong>K-comment.ru</strong></a></p>
+    <p>Сервис избранных товаров</p>
   </body>
 </html>
