--- a/app/views/user_mailer/test_welcome_email.html.erb
+++ b/app/views/user_mailer/test_welcome_email.html.erb
@@ -4,18 +4,14 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to k-comment.ru, <%= @user.name %></h1>
+    <h2>Welcome to k-comment.ru</h2>
     <p>
-      You have successfully signed up to  k-comment.ru,
-      your subdomain is: <%= @user.subdomain %>.<br>
-    </p>
-    <p>
-      To login to the site, just follow this link: <%= @url %>.
+      Новая регистрация в приложении
     </p>
     <p>Thanks for joining and have a great day!</p>
     <p>___</p>
-    <p>С уважением,</p>
-    <p>служба поддержки <a href="http://k-comment.ru"><strong>K-comment.ru</strong></a></p>
+    <p>С уважением, служба поддержки </p>
+    <p><a href="http://k-comment.ru"><strong>K-comment.ru</strong></a></p>
     <p>Сервис избранных товаров</p>
   </body>
 </html>
