--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -226,3 +226,40 @@ pre {
   .flickr_pagination .next_page {
     margin-left: 1em; }
 /* paginate style*/
+.card {
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    border: 0;
+}
+.view {
+    position: relative;
+    overflow: hidden;
+    cursor: default;
+}
+.view img {
+    position: relative;
+    display: block;
+}
+.rgba-white-slight, .rgba-white-slight:after {
+    background-color: rgba(255,255,255,.1);
+}
+.view .mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    background-attachment: fixed;
+}
+.overlay .mask {
+    opacity: 0;
+    -webkit-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+}
+.overlay .mask:hover {
+    opacity: 1;
+}
