--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -22,7 +22,7 @@
       <th>ФИО</th>
       <th>Email</th>
       <th>Товары в избранном</th>
-      <th colspan="1"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -32,8 +32,9 @@
         <td><%= client['clientid'] %></td>
         <td><%= client['fio'] %></td>
         <td><%= client['email'] %></td>
-        <td><%= client['izb_productid'] %></td>
+        <td><%= truncate(client['izb_productid'], :length => 30, :omission => '... (и др.)') %></td>
         <td><%= link_to '<i class="fa fa-eye" aria-hidden="true"></i>'.html_safe, client_path(:id => client['id'], :fio =>  client['fio'], :email => client['email']) %></td>
+        <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, client_path(:id => client['id']), method: :delete, data: { confirm: 'Вы уверенны?' } %></td>
       </tr>
     <% end %>
   </tbody>
