--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="<%= adminindex_insints_path %>">Интеграции</a>
               </li>
             <% end %>
-            <% if !current_admin %>
+            <%# if !current_admin %>
               <li class="nav-item <%= 'active' if current_page?(clients_path) %>">
                 <a class="nav-link" href="<%= clients_path %>">Клиенты и Товары</a>
               </li>
@@ -63,7 +63,7 @@
                   <a class="dropdown-item <%= 'active' if current_page?(invoices_path) %>" href="<%= invoices_path %>">Счета</a>
                 </div>
               </li>
-            <% end %>
+            <%# end %>
           </ul>
           <ul class="navbar-nav">
             <!-- <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></a> <div class="dropdown-menu
