--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
     <!-- About Section Content -->
     <div class="row">
       <div class="col-lg-4 ml-auto">
-        <p class="lead">"K-comment - избранные товары" это приложение для CMS Insales. Оно позволяет сделать в магазине раздел с избранными товарами Ваших зарегистрированных клиентов.</p>
+        <p class="lead">"K-comment - избранные товары" это приложение для CMS InSales. Оно позволяет сделать в магазине раздел с избранными товарами Ваших зарегистрированных клиентов.</p>
       </div>
       <div class="col-lg-4 mr-auto">
         <p class="lead">Это позволит Вашим клиентам получить более качественные сервис от Вашего магазина.</p>
