--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,7 +56,7 @@
           </div>
           <div class="card-body">
             <h4 class="card-title">Отчеты об отобранных товарах</h4>
-            <p class="card-text">Вы можете просматривать статистику отобранных товарах по клиентам отдельно или экспортировать весь список в CSV для дальнейшего анализа.</p>
+            <p class="card-text">Вы можете просматривать список отобранных товаров по клиентам отдельно или экспортировать весь список в CSV для дальнейшего анализа.</p>
           </div>
         </div>
       </div>
