--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -5,7 +5,7 @@
     <%= f.input_field :password, class: 'form-control' , placeholder: "Password - (#{@minimum_password_length} characters minimum)"    %>
     <%= f.input_field :password_confirmation, class: 'form-control' , placeholder: "Password confirmation"     %>
     <%= f.input_field :name, class: 'form-control' , placeholder: "Ваше Имя"   %>
-    <%= f.input_field :subdomain ,  class: 'form-control' , placeholder: "Домен (например - 'myshop')"   %>
+    <%= f.input_field :subdomain ,  class: 'form-control' , placeholder: "Логин (например - 'myshop')"   %>
 
     <%= f.submit t('.sign_up', :default => "Поехали"), class: 'btn btn-success' %>
 <% end %>
