--- a/app/views/dashboard/users.html.erb
+++ b/app/views/dashboard/users.html.erb
@@ -19,12 +19,12 @@
   <thead class="thead-light">
     <tr>
       <th>Имя</th>
-      <th>Subdomain</th>
-      <th>email</th>
-      <th>created_at</th>
-      <th>updated_at</th>
-      <th>valid_until</th>
-      <th>last_sign_in_at</th>
+      <th>Логин</th>
+      <th>Email</th>
+      <th>Создан</th>
+      <th>Обновлён</th>
+      <th>Действует до</th>
+      <th>Последний вход</th>
       <th colspan="1"></th>
     </tr>
   </thead>
