--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
         <p class="lead">Вы сможете просматривать какие товары клиенты откладывают и тем самым предлагать клиентам дополнительную мотивацию для их приобретения.</p>
       </div>
     </div>
-
+    <div class="text-center"><a class="btn btn-primary btn-lg" href="http://demo-themes.myinsales.ru/" target="_blank">Демо магазин</a></div>
   </div>
 </section>
 <section class="page-section mb-0 pb-0" id="service-images">
