--- a/app/views/insints/adminindex.html.erb
+++ b/app/views/insints/adminindex.html.erb
@@ -14,12 +14,12 @@
 <table class="table table-hover table-condensed table-sm">
   <thead class="thead-light">
     <tr>
-      <th>Inskey</th>
-      <th>Password</th>
-      <th>Subdomen</th>
+      <th>Ключ</th>
+      <th>Пароль</th>
+      <th>ДоменИнтегр</th>
       <th>Insales id</th>
-      <th>User</th>
-      <th>Файлы интегр</th>
+      <th>Имя пользователя</th>
+      <th>ФайлыИнтегр</th>
       <th>Проверить интегр</th>
       <th colspan="2"></th>
     </tr>
