--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -18,7 +18,7 @@
       <th>User</th>
       <th>User активен до</th>
       <th>Invoice</th>
-      <th>Payplan</th>
+      <th>Тариф</th>
       <th>Способ оплаты</th>
       <th>Дата оплаты</th>
       <th>Id оплаты</th>
